[gd_scene load_steps=11 format=3 uid="uid://jv0prokpjsrw"]

[ext_resource type="PackedScene" uid="uid://dgx4dmy8jeqee" path="res://scenes/ui/parts/hoverable.tscn" id="1_2gaf0"]
[ext_resource type="Script" uid="uid://biblr6bot0nlx" path="res://scenes/maps/parts/fontain_fire.gd" id="2_8m8ue"]
[ext_resource type="Material" uid="uid://clptb0rjqplxi" path="res://assets/textures/brown_wood.tres" id="2_olgiw"]
[ext_resource type="Material" uid="uid://cisk8kcrqgw17" path="res://particles/mesh/fontain_fire_material.tres" id="4_4f0hf"]
[ext_resource type="PrismMesh" uid="uid://c5x02ui4xuaqn" path="res://assets/3d/my/crystal_mesh.tres" id="4_4h4pn"]
[ext_resource type="Material" uid="uid://qakrfenm4nma" path="res://scenes/maps/parts/add_something_material.tres" id="5_7vnp8"]

[sub_resource type="CylinderMesh" id="CylinderMesh_nf7ql"]
material = ExtResource("2_olgiw")
top_radius = 0.05
bottom_radius = 0.05
height = 0.4

[sub_resource type="PrismMesh" id="PrismMesh_6mgfk"]
resource_local_to_scene = true
material = ExtResource("4_4f0hf")
left_to_right = 0.0
size = Vector3(0.19, 0.255, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_yibvs"]
size = Vector3(1.5, 0.6, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_b8t3v"]
size = Vector3(3, 0.1, 3)

[node name="FontainFire" instance=ExtResource("1_2gaf0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.025, 0)
script = ExtResource("2_8m8ue")

[node name="FlyingText" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.662144, 0)
visible = false

[node name="OmniLight3D" type="OmniLight3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0998134, 0.263934, 0)
light_color = Color(1, 1, 0.615686, 1)
light_energy = 2.0

[node name="AddCrystalParticles" type="GPUParticles3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03022, 0)
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
process_material = ExtResource("5_7vnp8")
draw_pass_1 = ExtResource("4_4h4pn")

[node name="Timer" type="Timer" parent="." index="3"]
wait_time = 0.5

[node name="MeshWrap" type="Node3D" parent="." index="4"]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshWrap" index="0"]
transform = Transform3D(0.995736, 0.0922489, -4.03233e-09, 0, -4.37114e-08, -1, -0.0922489, 0.995736, -4.3525e-08, 0.138, 0, 0)
mesh = SubResource("CylinderMesh_nf7ql")
skeleton = NodePath("../../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshWrap" index="1"]
transform = Transform3D(0.349079, -0.937093, -1.52587e-08, -4.37114e-08, 1.91069e-15, -1, 0.937093, 0.349079, -4.09616e-08, 0.164, 0, 0)
mesh = SubResource("CylinderMesh_nf7ql")
skeleton = NodePath("../../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshWrap" index="2"]
transform = Transform3D(-0.825665, 0, 0.56416, 0, 1, 0, -0.56416, 0, -0.825665, 0.058814, 0.112116, 0)
mesh = SubResource("PrismMesh_6mgfk")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="MeshWrap" index="3"]
transform = Transform3D(0.967762, 0, 0.251867, 0, 1, 0, -0.251867, 0, 0.967762, 0.249467, 0.112116, 0)
mesh = SubResource("PrismMesh_6mgfk")
skeleton = NodePath("../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="MeshWrap" index="4"]
transform = Transform3D(0.639694, 0, 0.76863, 0, 1, 0, -0.76863, 0, 0.639694, 0.182128, 0.112116, -0.0743614)
mesh = SubResource("PrismMesh_6mgfk")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshWrap" index="5"]
collision_layer = 34
collision_mask = 513

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshWrap/StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0691391, 0)
shape = SubResource("BoxShape3D_yibvs")

[node name="StaticBody3D2" type="StaticBody3D" parent="MeshWrap" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0224828, 0)
collision_layer = 2147483648
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshWrap/StaticBody3D2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25987, 0)
shape = SubResource("BoxShape3D_b8t3v")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="MeshWrap/StaticBody3D" to="." method="_on_static_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="MeshWrap/StaticBody3D" to="." method="_on_static_body_3d_mouse_exited"]
